# Production-Grade-Multi-Agent

./: .gitignore  ACTION_LEVEL_AUTH_GUIDE.md  EXECUTION_FLOW_ANALYSIS.md  IMPLEMENTATION_OVERVIEW.md  INTEGRATION_STEPS.md  LOGGER_QUICK_REF.md  LOGGING_GUIDE.md  LOGGING_REFACTOR_SUMMARY.md  QUICK_AUTH_REFERENCE.md  QUICK_SETUP_SWAGGER.md  README.md  README_AUTHENTICATION.md  START_HERE_SWAGGER.md  SWAGGER_COMPLETE_SETUP.md  SWAGGER_ENDPOINTS_GUIDE.md  SWAGGER_TESTING_GUIDE.md  dry_run.py  folder_structure.py  main.py  pyproject.toml  start_auth_server.bat  start_auth_server.sh  temp_tracer_test.py
app/: main.py  main_auth_setup.py
app/agents/: base.py
app/agents/critic/: critic_agent.py
app/agents/planner/: planner_agent.py
app/agents/researcher/: research_agent.py
app/agents/summarizer/: summarizer_agent.py
app/api/: auth_gateway.py  gateway.py
app/config/: settings.py
app/examples/: __init__.py  auth_workflow_example.py
app/orchestrator/: agent_capabilities.py  delegator.py
app/orchestrator/budget/: circuit_breaker.py  cost_budget.py  hooks.py  loader.py  models.py  retry_budget.py  token_budget.py  tool_call_budget.py  wall_time_budget.py
app/orchestrator/graph/: main_graph.py  state.py
app/orchestrator/guardrails/: guardrails_llm.py  guardrails_state.py  guardrails_tools.py
app/policies/: budget_profiles.yaml
app/security/: __init__.py  agent_identities.py  authentication.py  authorization.py  jit_manager.py  middleware.py  models.py  orchestration_hooks.py  prompt_guard.py  zero_trust.py
app/utils/: logger.py  token_counter.py
(+7 files in other folders)
